2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Changer_aggregate.pl: Set the aggregate
	  state-filename property

2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Rest_Storages.pl: Set the aggregate state_filename

2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Rest_Storages.pl: Typo

2016-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm: s/NO-STORAGE/ by the config_name
	* perl/Amanda/Changer/aggregate.pm: Various fix
	* server-src/driverio.c: Add comments
	* installcheck/Amanda_Changer_disk.pl: Fix comment
	* installcheck/Amanda_Rest_Storages.pl: Test chg-aggregate
	* installcheck/Installcheck/Changer.pm: Improve error message
	* installcheck/Installcheck/Rest.pm: Start starman with the
	  '--workers 1' argument
	* installcheck/Amanda_Changer_aggregate.pl: New script to test
	  chg-aggregate
	* installcheck/Makefile.am (server_tests): Add
	  Amanda_Changer_aggregate

2016-11-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	Fix race when using event_register in thread, the callback can be
	calback can before event_register return
	* */*.c : Use event_create and event_activate instead of
	  event_register

2016-11-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.4.1
	* VERSION: 3.4.1

2016-11-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c (retimeout): New function that change the
	  timeout_time but do create create the event
	* installcheck/Installcheck/Run.pm (check_amreport):
	  Add an option to skip the 'sendbackup: size' line
	* installcheck/failure-server-custom-compress.pl: Call check_amreport
	  with the skip_size bit set

2016-11-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amfetchdump.pl, server-src/amreport.pl: Do not add to
	  cfgerr_level

2016-11-21  Jean-Louis Martineau <JMartineau@carbonite.com>